No data pollution

--- a/config.yaml
+++ b/config.yaml
@@ -27,9 +27,9 @@ menu:
 params:
     name: 'Brightest Days Spray Foam Co.'
     showLanguageSelector: false #true if bilingual site - false if unilingua
-    usebasin: 'https://usebasin.com/f/7bbcae118128' #endpoint for forms
-    googlemap: 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2620.7901177865374!2d-125.54422898432286!3d48.93843927929546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548973bb74a97497%3A0xa1a90fb7c32ca3a3!2s1356%20Pine%20Rd%2C%20Ucluelet%2C%20BC%20V0R%203A0!5e0!3m2!1sen!2sca!4v1611952308750!5m2!1sen!2sca' # Map code of Google
-    gtm: 'GTM-ML2XLHP'
+    usebasin: '' #endpoint for forms
+    googlemap: '' # Map code of Google
+    gtm: ''
     imagekit_base_url: "https://ik.imagekit.io/supersonicsites/Westcoast_Salty_Buns/"
     hours:
         hour1en: 'Mon to Fri - 9:00-17:00' #Footer Hours Line #1
