--- a/config.yaml
+++ b/config.yaml
@@ -48,7 +48,7 @@ params:
         openinghour: 'Mo-Fr 9:00-17:00'
         logo: "img/logo.png"
         logofooter: "img/logo.png"
-        logo: "logo_saltybuns_WeQ1LzE7z.png"
+        logo: "logo-vertical_Q9u2mUs5X.jpg"
         og: "img/og.jpg"
         address: 1356 Pine Rd.
         address2: ''
