--- a/data/bacos/Jasko.yaml
+++ b/data/bacos/Jasko.yaml
@@ -1,3 +1,3 @@
-Item: Jsako Smoked Mole Chicken
+Item: Jasko Smoked Mole Chicken
 Price: 12
 Description: Smoked mole chicken, cabbage, pikled onions, pineapple salsa, pico de gallo, salsa verded, cholula mayo.
