--- a/data/bacos/Jasko.yaml
+++ b/data/bacos/Jasko.yaml
@@ -1,3 +1,3 @@
-Item: Jasko Smoked Mole Chicken
-Price: 12
-Description: Smoked mole chicken, cabbage, pikled onions, pineapple salsa, pico de gallo, salsa verded, cholula mayo.
+Item: Jasko Smoked Molé Chicken
+Price: 13
+Description: Smoked molé chicken, cabbage, pickled onions, pineapple salsa, pico de gallo, salsa verde, cholula mayo
