--- a/data/bacos/KCPO.yaml
+++ b/data/bacos/KCPO.yaml
@@ -1,3 +1,3 @@
 Item: KCPO
-Price: 12
-Description: Smoked pork, pineapple salsa, pikled onion, cabbage.
+Price: 13
+Description: Smoked pork, pineapple salsa, pickled onion, cabbage, hoisin aioli
