--- a/data/bites/Salmon Bites.yaml
+++ b/data/bites/Salmon Bites.yaml
@@ -1,3 +1,3 @@
-Item: Salmon Bites
+Item: Salmon Tostada
 Price: 14
-Description: Local salmon, gem lettuce, pikled fennel, radish, sprouts, cholula mayo, sesame seeds.
+Description: Local salmon, fried tortilla, black bean & corn salsa, pico de gallo, salsa verde, crushed walnuts, sprouts
