--- a/data/bites/Smoked Cod.yaml
+++ b/data/bites/Smoked Cod.yaml
@@ -1,3 +1,3 @@
-Item: Smoked Cod
+Item: Smoked Cod Tostada	
 Price: 13
-Description: Smoked ling cod, romaine lettuce, radish, pickled onion, corn flakes, lemon mayo.
+Description: Smoked ling cod, fried tortilla, pineapple salsa, feta, kimchi, cornflakes, lime sour cream
