--- a/data/bowls/The Monster and Sea.yaml
+++ b/data/bowls/The Monster and Sea.yaml
@@ -1,3 +1,3 @@
 Item: The Monster & Sea
 Price: 19
-Description: Quinoa, pikled vegetables, ponzu, side stripe shrimp, albacore tuna, lime sour cream, peanuts.
+Description: Quinoa, pickled vegetables, ponzu, side stripe shrimp, albacore tuna, lime sour cream, smoked walnuts
