--- a/data/burritos/Smoked Pollo.yaml
+++ b/data/burritos/Smoked Pollo.yaml
@@ -1,3 +1,3 @@
 Item: The Smoked Pollo
-Price: 13.50
-Description: Tortilla, smoked mole chicken, quinoa, cabbage, black bean and corn salsa, salsa verde, pimento cheese, lemon mayo.
+Price: 14.50
+Description: Tortilla, smoked molé chicken, quinoa, beans, cabbage, black bean & corn salsa, salsa verde, queso cheese, lemon mayo
