--- a/data/burritos/The Chadzilla.yaml
+++ b/data/burritos/The Chadzilla.yaml
@@ -1,3 +1,3 @@
 Item: The Chadzilla
-Price: 16
-Description: Tortilla, all of our smoked meats (chuck flat, pork and chicken), quinoa, cabbage, pickled peppers, queso, cholula mayo and absolutely NO pineapple.
+Price: 19
+Description: Tortilla, all of our smoked meats (chuck flat, pork & chicken), quinoa, beans, cabbage, pickled peppers, queso cheese, cholula mayo and absolutely NO pineapple!
