--- a/data/bacos/Albacore.yaml
+++ b/data/bacos/Albacore.yaml
@@ -1,3 +1,3 @@
 Item: Albacore Tuna
 Price: 15
-Description: Local tuna, pikled vegetables, lime sour cream, sprouts, crushed peanuts, house made Szachuan.
+Description: Local tuna, pickled vegetables, lime sour cream, sprouts, crushed walnuts, house made Szechuan
