--- a/data/bites/Vegan Popcorn Chicken.yaml
+++ b/data/bites/Vegan Popcorn Chicken.yaml
@@ -1,3 +1,3 @@
 Item: Vegan Popcorn Chicken
 Price: 13
-Description: Fried tofu, pikled cabbage, sweet chili, pico de gallo, crushed peanuts.
+Description: Fried tofu, pickled cabbage, sweet chili, pico de gallo, crushed walnuts
