--- a/data/bowls/The Flexitarian.yaml
+++ b/data/bowls/The Flexitarian.yaml
@@ -1,3 +1,3 @@
 Item: The Flexitarian
 Price: 17
-Description: Quinoa, pikled vegetables, black bean and corn salsa, tomato, feta, sriracha sour cream, avocado, hummus.
+Description: Quinoa, pickled vegetables, black bean & corn salsa, pico de gallo, feta, sriracha sour cream, avocado
