--- a/data/bowls/The Sockeye.yaml
+++ b/data/bowls/The Sockeye.yaml
@@ -1,3 +1,3 @@
 Item: The Sockeye
 Price: 18
-Description: Quinoa, pikled vegetables, wild salmon, tomato, kale, sprouts, soy.
+Description: Quinoa, pickled vegetables, wild salmon, pico de gallo, sprouts, soy
