--- a/data/burritos/Bubba.yaml
+++ b/data/burritos/Bubba.yaml
@@ -1,3 +1,3 @@
 Item: The Bubba
-Price: 14.50
-Description: Tortilla, smnoked chuck flat, quinoa, cabbage, queso, house made Szechuan.
+Price: 15
+Description: Tortilla, smoked chuck flat, quinoa, beans, cabbage, queso cheese, house made Szechuan
