--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.westcoastsaltybuns.com"
+baseURL: "https://www.westcoastsaltybuns.com/"
 DefaultContentLanguage: en
 title: West Coast Salty Buns
 description: Ukee's Coolest Winnebago Food Truck. Serving Up Fresh Top Quality Bites, Burritos, Bacos & Bowls.
