--- a/config.yaml
+++ b/config.yaml
@@ -29,8 +29,9 @@ params:
     gtm: 'GTM-PVL3WCQ'
     imagekit_base_url: "https://ik.imagekit.io/supersonicsites/Westcoast_Salty_Buns/"
     hours:
-        hour1en: 'Tue to Sun - 12:00-8:00' #Footer Hours Line #1
+        hour1en: 'Wed to Sun - 12:00-8:00' #Footer Hours Line #1
         hour2en: 'Mon - Closed' #Footer Hours Line #2
+        hour3en: 'Tue - Closed' #Footer Hours Line #2
     social:
         facebook: ''
         twitter: ''
@@ -41,7 +42,7 @@ params:
         type: Restaurant
         priceRange: $$$
         reservation: 'false'
-        openinghour: 'Tu-Su 12:00-20:00'
+        openinghour: 'We-Su 12:00-20:00'
         logo: "img/logo.png"
         logofooter: "img/logo.png"
         logo: "logo-vertical_Q9u2mUs5X.jpg"
